--- a/TicTacToe/app/src/main/AndroidManifest.xml
+++ b/TicTacToe/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.adrianaisemberg.tictactoe">
 
     <application
+        android:name=".TicTacToeApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
