--- a/TicTacToe/app/build.gradle
+++ b/TicTacToe/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
 
     // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
 }
 
 dependencies {
