--- a/TicTacToe/app/build.gradle
+++ b/TicTacToe/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.adrianaisemberg.tictactoe"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 31
         versionCode 701
         versionName "7.01"
@@ -66,6 +66,7 @@ dependencies {
     // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
 }
 
 dependencies {
