--- a/TicTacToe/app/build.gradle
+++ b/TicTacToe/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
 }
@@ -87,14 +88,3 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:19.0.1'
 }
 
-//
-//dependencies {
-//    // Import the BoM for the Firebase platform
-//    implementation platform('com.google.firebase:firebase-bom:26.5.0')
-//
-//    // Declare the dependencies for the Crashlytics and Analytics libraries
-//    // When using the BoM, you don't specify versions in Firebase library dependencies
-//    implementation 'com.google.firebase:firebase-crashlytics-ktx:18.2.1'
-//    implementation 'com.google.firebase:firebase-analytics-ktx:19.0.1'
-//    implementation 'com.google.firebase:firebase-config-ktx:21.0.1'
-//}
